# yg.engine

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/00-basic-render/: CMakeLists.txt  shader.frag  shader.vert  triangle.cxx
examples/00-basic-render/data/shaders/: shader.frag  shader.vert
examples/00_forward_declaration/: CMakeLists.txt
examples/00_forward_declaration/few_files/: CMakeLists.txt  bot.cxx  bot.hxx  damage.hxx  forwards.hxx  main.cxx  player.cxx  player.hxx
examples/00_forward_declaration/one_file/: CMakeLists.txt  main.cxx
examples/01_catch_unittests/: CMakeLists.txt  main.cxx
libs/: CMakeLists.txt
libs/argparse/: argparse.hxx
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/include/SDL3/: SDL_revision.h
libs/linux/: libSDL3.so.0
src/: CMakeLists.txt
src/internal/: CMakeLists.txt  base_types.hxx  main.cxx
src/internal/render/: CMakeLists.txt  compiled_shader.hxx  index_buffer.hxx  render_context.hxx  shader.hxx  types.hxx  types.unittest.cxx  vertex_buffer.hxx
src/internal/render/opengl/: compiled_shader_opengl.cxx  compiled_shader_opengl.hxx  index_buffer_opengl.cxx  index_buffer_opengl.hxx  render_context_opengl.cxx  render_context_opengl.hxx  shader_opengl.cxx  shader_opengl.hxx  vertex_buffer_opengl.cxx  vertex_buffer_opengl.hxx
src/internal/tools/: CMakeLists.txt  files_api.hxx
src/internal/tools/filesystem/: files_api.cxx
src/internal/tools/threads/: unit_tests_thread.hxx
src/internal/window/: CMakeLists.txt  window_manager.cxx  window_manager.hxx  window_sdl.cxx
src/internal/window/render/: render_context_opengl.hxx
src/internal/window/sdl/: window_sdl.cxx  window_sdl.hxx
src/window/: window_manager.cxx  window_manager.hxx
window/render/: render_context.hxx  render_context_opengl.cxx  vertex_buffer.hxx
